@@ -1,8 +1,11 @@
 package com.ticketly.mseventseating.service;
 
-import com.ticketly.mseventseating.dto.OrganizationRequest;
-import com.ticketly.mseventseating.dto.OrganizationResponse;
+import com.ticketly.mseventseating.config.AppLimitsConfig;
+import com.ticketly.mseventseating.dto.organization.OrganizationRequest;
+import com.ticketly.mseventseating.dto.organization.OrganizationResponse;
 import com.ticketly.mseventseating.exception.BadRequestException;
+import com.ticketly.mseventseating.exception.ResourceNotFoundException;
+import com.ticketly.mseventseating.model.SubscriptionLimitType;
 import org.springframework.security.authorization.AuthorizationDeniedException;
 import com.ticketly.mseventseating.model.Organization;
 import com.ticketly.mseventseating.repository.OrganizationRepository;
@@ -15,8 +18,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.security.oauth2.jwt.Jwt;
-import org.springframework.test.util.ReflectionTestUtils;
-import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.time.OffsetDateTime;
@@ -36,9 +37,12 @@ class OrganizationServiceTest {
 
     @Mock
     private OrganizationOwnershipService ownershipService;
-    
+
     @Mock
-    private TierService tierService;
+    private LimitService limitService;
+
+    @Mock
+    private AppLimitsConfig.OrganizationConfig organizationConfig;
 
     @InjectMocks
     private OrganizationService organizationService;
@@ -50,39 +54,45 @@ class OrganizationServiceTest {
     private final String LOGO_URL = "organization-logos/logo-uuid.jpg";
     private final String PRESIGNED_URL = "https://bucket.s3.amazonaws.com/organization-logos/logo-uuid.jpg";
 
-    private Organization testOrganization;
-    private OrganizationRequest testRequest;
-    private Jwt mockJwt;
+    private Organization organization;
+    private Jwt jwt;
+    private OrganizationRequest organizationRequest;
 
     @BeforeEach
     void setUp() {
-        // Configure service properties
-        ReflectionTestUtils.setField(organizationService, "maxLogoSize", 2 * 1024 * 1024); // 2MB
-
-        // Set up test data
-        testOrganization = Organization.builder()
+        organization = Organization.builder()
                 .id(ORG_ID)
                 .name(ORG_NAME)
                 .website(ORG_WEBSITE)
                 .userId(USER_ID)
                 .logoUrl(LOGO_URL)
-                .createdAt(OffsetDateTime.now())
+                .createdAt(OffsetDateTime.now().minusDays(1))
                 .updatedAt(OffsetDateTime.now())
                 .build();
 
-        testRequest = OrganizationRequest.builder()
-                .name(ORG_NAME)
-                .website(ORG_WEBSITE)
+        // Set up JWT
+        Map<String, Object> claims = new HashMap<>();
+        claims.put("sub", USER_ID);
+
+        jwt = Jwt.withTokenValue("token")
+                .header("alg", "RS256")
+                .claims(c -> c.putAll(claims))
                 .build();
-                
-        // Mock JWT
-        mockJwt = mock(Jwt.class);
+
+        organizationRequest = new OrganizationRequest(ORG_NAME, ORG_WEBSITE);
+
     }
 
     @Test
-    void getAllOrganizationsForUser_ShouldReturnListOfOrganizations() {
+    void getAllOrganizationsForUser_shouldReturnUserOrganizations() {
         // Arrange
-        List<Organization> organizations = Collections.singletonList(testOrganization);
+        Organization org2 = Organization.builder()
+                .id(UUID.randomUUID())
+                .name("Second Org")
+                .userId(USER_ID)
+                .build();
+
+        List<Organization> organizations = Arrays.asList(organization, org2);
         when(organizationRepository.findByUserId(USER_ID)).thenReturn(organizations);
         when(s3StorageService.generatePresignedUrl(LOGO_URL, 60)).thenReturn(PRESIGNED_URL);
 
@@ -90,328 +100,320 @@ class OrganizationServiceTest {
         List<OrganizationResponse> result = organizationService.getAllOrganizationsForUser(USER_ID);
 
         // Assert
-        assertEquals(1, result.size());
+        assertEquals(2, result.size());
         assertEquals(ORG_ID, result.getFirst().getId());
-        assertEquals(ORG_NAME, result.getFirst().getName());
-        assertEquals(ORG_WEBSITE, result.getFirst().getWebsite());
-        assertEquals(PRESIGNED_URL, result.getFirst().getLogoUrl());
-
+        assertEquals(ORG_NAME, result.get(0).getName());
+        assertEquals(PRESIGNED_URL, result.get(0).getLogoUrl());
+        assertEquals("Second Org", result.get(1).getName());
         verify(organizationRepository).findByUserId(USER_ID);
-        verify(s3StorageService).generatePresignedUrl(LOGO_URL, 60);
     }
 
     @Test
-    void getOrganizationById_ShouldReturnOrganization_WhenFound() {
+    void getOrganizationById_whenUserIsOwner_shouldReturnOrganizationAndUser() {
         // Arrange
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(true);
-        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(testOrganization));
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(true);
+        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(organization));
         when(s3StorageService.generatePresignedUrl(LOGO_URL, 60)).thenReturn(PRESIGNED_URL);
 
         // Act
-        OrganizationResponse result = organizationService.getOrganizationById(ORG_ID, USER_ID);
+        OrganizationResponse result = organizationService.getOrganizationByIdOwner(ORG_ID, USER_ID);
 
         // Assert
+        assertNotNull(result);
         assertEquals(ORG_ID, result.getId());
         assertEquals(ORG_NAME, result.getName());
+        assertEquals(ORG_WEBSITE, result.getWebsite());
         assertEquals(PRESIGNED_URL, result.getLogoUrl());
-
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
-        verify(organizationRepository).findById(ORG_ID);
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
     }
 
     @Test
-    void getOrganizationById_ShouldThrowException_WhenNotOwned() {
+    void getOrganizationById_AndUser_whenUserIsNotOwner_shouldThrowAuthorizationDeniedException() {
         // Arrange
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(false);
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(false);
 
         // Act & Assert
         assertThrows(AuthorizationDeniedException.class, () ->
-                organizationService.getOrganizationById(ORG_ID, USER_ID)
-        );
+                organizationService.getOrganizationByIdOwner(ORG_ID, USER_ID));
 
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
-        verify(organizationRepository, never()).findById(ORG_ID);
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
+        verifyNoMoreInteractions(organizationRepository);
     }
 
     @Test
-    void createOrganization_ShouldCreateAndReturnOrganization() {
+    void createOrganization_shouldCreateAndReturnOrganization() {
         // Arrange
-        Organization savedOrganization = testOrganization;
+        when(limitService.getTierLimit(SubscriptionLimitType.MAX_ORGANIZATIONS_PER_USER, jwt)).thenReturn(5);
         when(organizationRepository.countByUserId(USER_ID)).thenReturn(2L);
-        when(tierService.getMaxOrganizationsForUser(mockJwt)).thenReturn(3);
-        when(organizationRepository.save(any(Organization.class))).thenReturn(savedOrganization);
-        when(s3StorageService.generatePresignedUrl(LOGO_URL, 60)).thenReturn(PRESIGNED_URL);
+
+        when(organizationRepository.save(any(Organization.class))).thenReturn(organization);
 
         // Act
-        OrganizationResponse result = organizationService.createOrganization(testRequest, USER_ID, mockJwt);
+        OrganizationResponse result = organizationService.createOrganization(organizationRequest, USER_ID, jwt);
 
         // Assert
+        assertNotNull(result);
+        assertEquals(ORG_ID, result.getId());
         assertEquals(ORG_NAME, result.getName());
-        assertEquals(ORG_WEBSITE, result.getWebsite());
 
-        ArgumentCaptor<Organization> organizationCaptor = ArgumentCaptor.forClass(Organization.class);
-        verify(organizationRepository).save(organizationCaptor.capture());
+        ArgumentCaptor<Organization> orgCaptor = ArgumentCaptor.forClass(Organization.class);
+        verify(organizationRepository).save(orgCaptor.capture());
 
-        Organization capturedOrg = organizationCaptor.getValue();
+        Organization capturedOrg = orgCaptor.getValue();
         assertEquals(ORG_NAME, capturedOrg.getName());
         assertEquals(ORG_WEBSITE, capturedOrg.getWebsite());
         assertEquals(USER_ID, capturedOrg.getUserId());
     }
 
     @Test
-    void createOrganization_ShouldThrowException_WhenUserExceedsLimit() {
+    void createOrganization_whenExceedingLimit_shouldThrowBadRequestException() {
         // Arrange
+        when(limitService.getTierLimit(SubscriptionLimitType.MAX_ORGANIZATIONS_PER_USER, jwt)).thenReturn(3);
         when(organizationRepository.countByUserId(USER_ID)).thenReturn(3L);
-        when(tierService.getMaxOrganizationsForUser(mockJwt)).thenReturn(3);
 
         // Act & Assert
-        assertThrows(BadRequestException.class, () ->
-                organizationService.createOrganization(testRequest, USER_ID, mockJwt)
-        );
+        BadRequestException exception = assertThrows(BadRequestException.class, () ->
+                organizationService.createOrganization(organizationRequest, USER_ID, jwt));
 
-        verify(organizationRepository).countByUserId(USER_ID);
-        verify(organizationRepository, never()).save(any());
-    }
-    
-    @Test
-    void createOrganization_ShouldAllowDifferentLimitsBasedOnTier() {
-        // Arrange
-        Organization savedOrganization = testOrganization;
-        when(organizationRepository.countByUserId(USER_ID)).thenReturn(5L);
-        when(tierService.getMaxOrganizationsForUser(mockJwt)).thenReturn(10); // Higher tier limit
-        when(organizationRepository.save(any(Organization.class))).thenReturn(savedOrganization);
-        when(s3StorageService.generatePresignedUrl(LOGO_URL, 60)).thenReturn(PRESIGNED_URL);
-
-        // Act
-        OrganizationResponse result = organizationService.createOrganization(testRequest, USER_ID, mockJwt);
-
-        // Assert
-        assertEquals(ORG_NAME, result.getName());
-        assertEquals(ORG_WEBSITE, result.getWebsite());
-        
-        // Verify the tier service was called
-        verify(tierService).getMaxOrganizationsForUser(mockJwt);
+        assertTrue(exception.getMessage().contains("maximum limit of 3 organizations"));
+        verify(organizationRepository, never()).save(any(Organization.class));
     }
 
     @Test
-    void updateOrganization_ShouldUpdateAndReturnOrganization() {
+    void updateOrganization_whenUserIsOwner_shouldUpdateAndReturnOrganization() {
         // Arrange
-        String updatedName = "Updated Organization";
-        String updatedWebsite = "https://updated-org.com";
-
-        OrganizationRequest updateRequest = OrganizationRequest.builder()
-                .name(updatedName)
-                .website(updatedWebsite)
-                .build();
-
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(true);
-        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(testOrganization));
-        when(organizationRepository.save(any(Organization.class))).thenReturn(
-                Organization.builder()
-                        .id(ORG_ID)
-                        .name(updatedName)
-                        .website(updatedWebsite)
-                        .userId(USER_ID)
-                        .logoUrl(LOGO_URL)
-                        .createdAt(OffsetDateTime.now())
-                        .updatedAt(OffsetDateTime.now())
-                        .build()
-        );
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(true);
+        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(organization));
+        when(organizationRepository.save(any(Organization.class))).thenReturn(organization);
         when(s3StorageService.generatePresignedUrl(LOGO_URL, 60)).thenReturn(PRESIGNED_URL);
+
+        String newName = "Updated Organization";
+        String newWebsite = "https://updated-org.com";
+        OrganizationRequest updateRequest = new OrganizationRequest(newName, newWebsite);
 
         // Act
         OrganizationResponse result = organizationService.updateOrganization(ORG_ID, updateRequest, USER_ID);
 
         // Assert
-        assertEquals(updatedName, result.getName());
-        assertEquals(updatedWebsite, result.getWebsite());
+        assertNotNull(result);
 
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
+        ArgumentCaptor<Organization> orgCaptor = ArgumentCaptor.forClass(Organization.class);
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
+        verify(organizationRepository).save(orgCaptor.capture());
 
-        ArgumentCaptor<Organization> organizationCaptor = ArgumentCaptor.forClass(Organization.class);
-        verify(organizationRepository).save(organizationCaptor.capture());
-
-        Organization capturedOrg = organizationCaptor.getValue();
-        assertEquals(updatedName, capturedOrg.getName());
-        assertEquals(updatedWebsite, capturedOrg.getWebsite());
+        Organization updatedOrg = orgCaptor.getValue();
+        assertEquals(newName, updatedOrg.getName());
+        assertEquals(newWebsite, updatedOrg.getWebsite());
     }
 
     @Test
-    void uploadLogo_ShouldUploadAndUpdateOrganization() throws IOException {
+    void updateOrganization_whenUserIsNotOwner_shouldThrowAuthorizationDeniedException() {
         // Arrange
-        MockMultipartFile logoFile = new MockMultipartFile(
-                "logo",
-                "logo.jpg",
-                "image/jpeg",
-                "test logo content".getBytes()
-        );
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(false);
 
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(true);
-        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(testOrganization));
-        when(s3StorageService.uploadFile(any(MultipartFile.class), eq("organization-logos"))).thenReturn(LOGO_URL);
-        when(organizationRepository.save(any(Organization.class))).thenReturn(testOrganization);
-        when(s3StorageService.generatePresignedUrl(LOGO_URL, 60)).thenReturn(PRESIGNED_URL);
+        // Act & Assert
+        assertThrows(AuthorizationDeniedException.class, () ->
+                organizationService.updateOrganization(ORG_ID, organizationRequest, USER_ID));
+
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
+        verifyNoInteractions(s3StorageService);
+        verify(organizationRepository, never()).save(any(Organization.class));
+    }
+
+    @Test
+    void uploadLogo_whenUserIsOwnerAndValidFile_shouldUpdateLogo() throws IOException {
+        // Arrange
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(true);
+        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(organization));
+
+        MockMultipartFile logoFile = new MockMultipartFile(
+                "logo", "logo.jpg", "image/jpeg", "test image content".getBytes());
+
+        when(s3StorageService.uploadFile(logoFile, "organization-logos")).thenReturn("new-logo-url.jpg");
+        when(organizationRepository.save(any(Organization.class))).thenReturn(organization);
+        when(s3StorageService.generatePresignedUrl(any(), eq(60))).thenReturn(PRESIGNED_URL);
+        when(limitService.getOrganizationConfig()).thenReturn(organizationConfig);
+        when(organizationConfig.getMaxLogoSize()).thenReturn(5 * 1024 * 1024L); // 5 MB
 
         // Act
         OrganizationResponse result = organizationService.uploadLogo(ORG_ID, logoFile, USER_ID);
 
         // Assert
-        assertEquals(PRESIGNED_URL, result.getLogoUrl());
+        assertNotNull(result);
 
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
-        verify(s3StorageService).uploadFile(any(MultipartFile.class), eq("organization-logos"));
-        verify(organizationRepository).save(any(Organization.class));
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
+        verify(s3StorageService).deleteFile(LOGO_URL); // Should delete old logo
+        verify(s3StorageService).uploadFile(logoFile, "organization-logos");
+        verify(limitService).getOrganizationConfig(); // Verify the method was called
+
+        ArgumentCaptor<Organization> orgCaptor = ArgumentCaptor.forClass(Organization.class);
+        verify(organizationRepository).save(orgCaptor.capture());
+        assertEquals("new-logo-url.jpg", orgCaptor.getValue().getLogoUrl());
     }
 
     @Test
-    void uploadLogo_ShouldDeleteOldLogoIfExists() throws IOException {
+    void removeLogo_whenUserIsOwner_shouldRemoveLogo() {
         // Arrange
-        String oldLogoUrl = "organization-logos/old-logo.jpg";
-        testOrganization.setLogoUrl(oldLogoUrl);
-
-        MockMultipartFile logoFile = new MockMultipartFile(
-                "logo",
-                "logo.jpg",
-                "image/jpeg",
-                "test logo content".getBytes()
-        );
-
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(true);
-        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(testOrganization));
-        when(s3StorageService.uploadFile(any(MultipartFile.class), eq("organization-logos"))).thenReturn(LOGO_URL);
-        when(organizationRepository.save(any(Organization.class))).thenReturn(testOrganization);
-        when(s3StorageService.generatePresignedUrl(LOGO_URL, 60)).thenReturn(PRESIGNED_URL);
-
-        // Act
-        organizationService.uploadLogo(ORG_ID, logoFile, USER_ID);
-
-        // Assert
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
-        verify(s3StorageService).deleteFile(oldLogoUrl);
-    }
-
-    @Test
-    void uploadLogo_ShouldThrowException_WhenFileTypeIsInvalid() throws IOException {
-        // Arrange
-        MockMultipartFile logoFile = new MockMultipartFile(
-                "logo",
-                "logo.txt",
-                "text/plain",
-                "not an image".getBytes()
-        );
-
-        // Act & Assert
-        assertThrows(BadRequestException.class, () ->
-                organizationService.uploadLogo(ORG_ID, logoFile, USER_ID)
-        );
-
-        verify(s3StorageService, never()).uploadFile(any(), anyString());
-        verify(organizationRepository, never()).save(any());
-    }
-
-    @Test
-    void uploadLogo_ShouldThrowException_WhenFileSizeExceedsLimit() throws IOException {
-        // Arrange
-        MockMultipartFile logoFile = new MockMultipartFile(
-                "logo",
-                "logo.jpg",
-                "image/jpeg",
-                new byte[3 * 1024 * 1024] // 3MB
-        );
-
-        // Act & Assert
-        assertThrows(BadRequestException.class, () ->
-                organizationService.uploadLogo(ORG_ID, logoFile, USER_ID)
-        );
-
-        verify(s3StorageService, never()).uploadFile(any(), anyString());
-        verify(organizationRepository, never()).save(any());
-    }
-
-    @Test
-    void deleteOrganization_ShouldDeleteOrganization() {
-        // Arrange
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(true);
-        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(testOrganization));
-        doNothing().when(organizationRepository).delete(any(Organization.class));
-
-        // Act
-        organizationService.deleteOrganization(ORG_ID, USER_ID);
-
-        // Assert
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
-        verify(ownershipService).evictAllOwnershipByOrganization(ORG_ID);
-        verify(s3StorageService).deleteFile(LOGO_URL);
-        verify(organizationRepository).delete(testOrganization);
-    }
-
-    @Test
-    void deleteOrganization_ShouldNotDeleteLogoIfNotExists() {
-        // Arrange
-        testOrganization.setLogoUrl(null);
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(true);
-        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(testOrganization));
-        doNothing().when(organizationRepository).delete(any(Organization.class));
-
-        // Act
-        organizationService.deleteOrganization(ORG_ID, USER_ID);
-
-        // Assert
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
-        verify(ownershipService).evictAllOwnershipByOrganization(ORG_ID);
-        verify(s3StorageService, never()).deleteFile(anyString());
-        verify(organizationRepository).delete(testOrganization);
-    }
-
-    @Test
-    void removeLogo_ShouldDeleteLogoAndUpdateOrganization() {
-        // Arrange
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(true);
-        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(testOrganization));
-        when(organizationRepository.save(any(Organization.class))).thenReturn(testOrganization);
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(true);
+        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(organization));
 
         // Act
         organizationService.removeLogo(ORG_ID, USER_ID);
 
         // Assert
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
         verify(s3StorageService).deleteFile(LOGO_URL);
 
-        ArgumentCaptor<Organization> organizationCaptor = ArgumentCaptor.forClass(Organization.class);
-        verify(organizationRepository).save(organizationCaptor.capture());
-
-        Organization capturedOrg = organizationCaptor.getValue();
-        assertNull(capturedOrg.getLogoUrl());
+        ArgumentCaptor<Organization> orgCaptor = ArgumentCaptor.forClass(Organization.class);
+        verify(organizationRepository).save(orgCaptor.capture());
+        assertNull(orgCaptor.getValue().getLogoUrl());
     }
 
     @Test
-    void removeLogo_ShouldNotCallS3Delete_WhenLogoDoesNotExist() {
+    void deleteOrganization_whenUserIsOwner_shouldDeleteOrganization() {
         // Arrange
-        Organization orgWithoutLogo = testOrganization.toBuilder().logoUrl(null).build();
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(true);
-        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(orgWithoutLogo));
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(true);
+        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(organization));
 
         // Act
-        organizationService.removeLogo(ORG_ID, USER_ID);
+        organizationService.deleteOrganization(ORG_ID, USER_ID);
 
         // Assert
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
-        verify(s3StorageService, never()).deleteFile(anyString());
-        verify(organizationRepository, never()).save(any(Organization.class));
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
+        verify(s3StorageService).deleteFile(LOGO_URL);
+        verify(organizationRepository).delete(organization);
+        verify(ownershipService).evictOrganizationCacheById(ORG_ID);
     }
 
     @Test
-    void removeLogo_ShouldThrowException_WhenUserIsNotOwner() {
+    void deleteOrganization_whenUserIsNotOwner_shouldThrowAuthorizationDeniedException() {
         // Arrange
-        when(ownershipService.isOrganizationOwnedByUser(USER_ID, ORG_ID)).thenReturn(false);
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(false);
 
         // Act & Assert
         assertThrows(AuthorizationDeniedException.class, () ->
-                organizationService.removeLogo(ORG_ID, USER_ID)
-        );
+                organizationService.deleteOrganization(ORG_ID, USER_ID));
 
-        verify(ownershipService).isOrganizationOwnedByUser(USER_ID, ORG_ID);
-        verify(s3StorageService, never()).deleteFile(anyString());
-        verify(organizationRepository, never()).save(any());
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
+        verifyNoInteractions(s3StorageService);
+        verify(organizationRepository, never()).delete(any());
+    }
+
+    @Test
+    void getOrganizationById_adminAccess_shouldReturnOrganization() {
+        // Arrange
+        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(organization));
+        when(s3StorageService.generatePresignedUrl(LOGO_URL, 60)).thenReturn(PRESIGNED_URL);
+
+        // Act
+        OrganizationResponse result = organizationService.getOrganizationById(ORG_ID);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(ORG_ID, result.getId());
+        assertEquals(ORG_NAME, result.getName());
+        assertEquals(ORG_WEBSITE, result.getWebsite());
+        assertEquals(PRESIGNED_URL, result.getLogoUrl());
+
+        // Verify repository was called but not ownership service (admin access)
+        verify(organizationRepository).findById(ORG_ID);
+        verifyNoInteractions(ownershipService);
+    }
+
+    @Test
+    void getOrganizationById_whenNotFound_shouldThrowResourceNotFoundException() {
+        // Arrange
+        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class,
+                () -> organizationService.getOrganizationById(ORG_ID));
+
+        assertTrue(exception.getMessage().contains("Organization not found with id"));
+        verify(organizationRepository).findById(ORG_ID);
+    }
+
+    @Test
+    void verifyOwnershipAndGetOrganization_whenUserIsOwner_shouldReturnOrganization() {
+        // Arrange
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(true);
+        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.of(organization));
+
+        // Act
+        Organization result = organizationService.verifyOwnershipAndGetOrganization(ORG_ID, USER_ID);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(ORG_ID, result.getId());
+        assertEquals(ORG_NAME, result.getName());
+        assertEquals(USER_ID, result.getUserId());
+
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
+        verify(organizationRepository).findById(ORG_ID);
+    }
+
+    @Test
+    void verifyOwnershipAndGetOrganization_whenUserIsNotOwner_shouldThrowAuthorizationDeniedException() {
+        // Arrange
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(false);
+
+        // Act & Assert
+        AuthorizationDeniedException exception = assertThrows(AuthorizationDeniedException.class,
+                () -> organizationService.verifyOwnershipAndGetOrganization(ORG_ID, USER_ID));
+
+        assertTrue(exception.getMessage().contains("User does not have access"));
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
+        verifyNoInteractions(organizationRepository);
+    }
+
+    @Test
+    void verifyOwnershipAndGetOrganization_whenOrganizationNotFound_shouldThrowResourceNotFoundException() {
+        // Arrange
+        when(ownershipService.isOwner(ORG_ID, USER_ID)).thenReturn(true);
+        when(organizationRepository.findById(ORG_ID)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        ResourceNotFoundException exception = assertThrows(ResourceNotFoundException.class,
+                () -> organizationService.verifyOwnershipAndGetOrganization(ORG_ID, USER_ID));
+
+        assertTrue(exception.getMessage().contains("Organization not found"));
+        verify(ownershipService).isOwner(ORG_ID, USER_ID);
+        verify(organizationRepository).findById(ORG_ID);
+    }
+
+    @Test
+    void uploadLogo_withInvalidFileType_shouldThrowBadRequestException() {
+        // Arrange
+
+        MockMultipartFile invalidFile = new MockMultipartFile(
+                "document", "document.pdf", "application/pdf", "test document content".getBytes());
+
+        // Act & Assert
+        BadRequestException exception = assertThrows(BadRequestException.class,
+                () -> organizationService.uploadLogo(ORG_ID, invalidFile, USER_ID));
+
+        assertTrue(exception.getMessage().contains("Invalid file type"));
+        verify(ownershipService, never()).isOwner(any(), any());
+        verify(organizationRepository, never()).findById(any());
+        verifyNoMoreInteractions(s3StorageService);
+    }
+
+    @Test
+    void uploadLogo_withExceededFileSize_shouldThrowBadRequestException() {
+        // Arrange
+        when(limitService.getOrganizationConfig()).thenReturn(organizationConfig);
+        when(organizationConfig.getMaxLogoSize()).thenReturn(10L); // Very small limit
+
+        MockMultipartFile largeFile = new MockMultipartFile(
+                "logo", "logo.jpg", "image/jpeg", "test image content".getBytes());
+
+        // Act & Assert
+        BadRequestException exception = assertThrows(BadRequestException.class,
+                () -> organizationService.uploadLogo(ORG_ID, largeFile, USER_ID));
+
+        assertTrue(exception.getMessage().contains("File size exceeds"));
+        verify(limitService).getOrganizationConfig();
+        verifyNoMoreInteractions(s3StorageService);
+        verify(ownershipService, never()).isOwner(any(), any());
     }
 }
